--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test",
     "build:style-sass": "sass ./styles/styles.scss ./styles/styles.css",
     "build:dev": "webpack --config ./webpack.config.js --mode development",
+    "build:prod": "webpack --config ./webpack.config.js --mode production",
     "build:dev-server": "webpack serve --open"
   },
   "repository": {
@@ -27,6 +28,8 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
     "html-loader": "^2.1.1",
+    "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
