--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-transform-runtime": "^7.13.9",
     "@babel/preset-env": "^7.13.9",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
